--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://jijabella.github.io/" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 
 # User Settings
-username: 레드 엔젤 이광희
+username: 레드 엔젤의 서재
 user_description: 레드엔젤 이광희의 블로그입니다.
 disqus_username: disqus_username
 
