--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,8 @@ links:
     url: /contact/
   - title: Contact2
     url: /contact/  
+  - title: 카테고리
+    url: /category/      
 
 # Exclude my node related stuff
 exclude: ['package.json', 'src', 'node_modules']
