--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ google_analytics: "UA-XXXXXXXX-X"
 # User Settings
 username: 레드 엔젤의 서재
 user_description: 레드엔젤 이광희의 블로그입니다.
-disqus_username: disqus_username
+disqus_username: RedAngel
 
 # Social Media
 # Remove the item if you don't need it
