--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,8 @@ links:
     url: /about/
   - title: Contact
     url: /contact/
+  - title: 영화노트
+    url: /category/영화노트/
 
 # Exclude my node related stuff
 exclude: ['package.json', 'src', 'node_modules']
